# mlops_poc

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml  requirements.txt  setup.sh  unit-requirements.txt
.dbx/: project.json
.dvc/: config
.github/workflows/: onpullrequest.yml  onpush.yml
conf/: deployment.yml
conf/dev/: .dev.env
conf/pipeline_configs/: feature_table_creator.yml  model_inference_batch.yml  model_train.yml  sample_test.yml
conf/prod/: .prod.env
conf/staging/: .staging.env
dags/: config.json  inference_model.py  model_inference_dag.py
telco_churn/: feature_table_creator.py  model_train.py
telco_churn/pipelines/: feature_table_creator_job.py
tests/unit/: model_train_pipeline_test.py
